--- a/templates/recipe_catalog/about.html
+++ b/templates/recipe_catalog/about.html
@@ -8,20 +8,23 @@
     <link rel="icon" href="{% static 'favicon.ico' %}" type="image">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
-    <header>
-        <nav class="w3-bar w3-black">
-            <a href="/" class="w3-bar-item w3-button">Главная страница</a>
-            <a href="{% url 'about' %}" class="w3-bar-item w3-button">О сайте</a>
-        </nav>
-    </header>
-    <main class="w3-container">
-        <h1>О нашем сервисе</h1>
-        <p>Наш сервис предоставляет удобный каталог рецептов, обновляемых в реальном времени. Вы можете изучить разные рецепты, узнать ингредиенты и их количество, и даже добавить свои идеи!</p>
-    </main>
-    <footer class="w3-black w3-center w3-padding-16">
-        <p>Подвал © 2024</p>
-    </footer>
+    <div class="container">
+        <header>
+            <nav class="w3-bar w3-black">
+                <a href="/" class="w3-bar-item w3-button">Главная страница</a>
+                <a href="{% url 'about' %}" class="w3-bar-item w3-button">О сайте</a>
+            </nav>
+        </header>
+        <main class="w3-container main-content">
+            <h1>О нашем сервисе</h1>
+            <p>Наш сервис предоставляет удобный каталог рецептов, обновляемых в реальном времени. Вы можете изучить разные рецепты, узнать ингредиенты и их количество, и даже добавить свои идеи!</p>
+        </main>
+        <footer class="footer w3-black w3-center w3-padding-16">
+            <p>Подвал © 2024</p>
+        </footer>
+    </div>
 </body>
 </html>
