--- a/templates/recipe_catalog/index.html
+++ b/templates/recipe_catalog/index.html
@@ -8,29 +8,32 @@
     <link rel="icon" href="{% static 'favicon.ico' %}" type="image">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
-    <header>
-        <nav class="w3-bar w3-black">
-            <a href="/" class="w3-bar-item w3-button">Главная страница</a>
-            <a href="{% url 'about' %}" class="w3-bar-item w3-button">О сайте</a>
-        </nav>
-    </header>
-    <main class="w3-container">
-        <h1>Главная страница</h1>
-        <div>Добро пожаловать! Ниже приведены наши рецепты:</div>
-        <ul>
-            {% for recipe in recipes %}
-                <li>
-                    <a href="{% url 'recipe_detail' recipe.recipe_id %}">{{ recipe.title }}</a>
-                </li>
-            {% empty %}
-                <li>Рецептов пока нет.</li>
-            {% endfor %}
-        </ul>
-    </main>
-    <footer class="w3-black w3-center w3-padding-16">
-        <p>Подвал © 2024</p>
-    </footer>
+    <div class="container">
+        <header>
+            <nav class="w3-bar w3-black">
+                <a href="/" class="w3-bar-item w3-button">Главная страница</a>
+                <a href="{% url 'about' %}" class="w3-bar-item w3-button">О сайте</a>
+            </nav>
+        </header>
+        <main class="w3-container main-content">
+            <h1>Главная страница</h1>
+            <div>Добро пожаловать! Ниже приведены наши рецепты:</div>
+            <div>
+                {% for recipe in recipes %}
+                    <p>
+                        <a href="{% url 'recipe_detail' recipe.id %}" class="w3-bar-item w3-button">{{ recipe.title }}</a>
+                    </p>
+                {% empty %}
+                    <p>Рецептов пока нет.</p>
+                {% endfor %}
+            </div>
+        </main>
+        <footer class="footer">
+            <p>Подвал © 2024</p>
+        </footer>
+    </div>
 </body>
 </html>
