--- a/templates/recipe_catalog/about.html
+++ b/templates/recipe_catalog/about.html
@@ -15,7 +15,7 @@
         <header>
             <nav class="w3-bar w3-black">
                 <a href="/" class="w3-bar-item w3-button">Главная страница</a>
-                <a href="{% url 'about' %}" class="w3-bar-item w3-button">О сайте</a>
+                <a href="{% url 'recipe_catalog:about' %}" class="w3-bar-item w3-button">О сайте</a>
             </nav>
         </header>
         <main class="w3-container main-content">
