--- a/templates/recipe_catalog/index.html
+++ b/templates/recipe_catalog/index.html
@@ -15,7 +15,7 @@
         <header>
             <nav class="w3-bar w3-black">
                 <a href="/" class="w3-bar-item w3-button">Главная страница</a>
-                <a href="{% url 'about' %}" class="w3-bar-item w3-button">О сайте</a>
+                <a href="{% url 'recipe_catalog:about' %}" class="w3-bar-item w3-button">О сайте</a>
             </nav>
         </header>
         <main class="w3-container main-content">
@@ -24,7 +24,7 @@
             <div>
                 {% for recipe in recipes %}
                     <p>
-                        <a href="{% url 'recipe_detail' recipe.id %}" class="w3-bar-item w3-button">{{ recipe.title }}</a>
+                        <a href="{% url 'recipe_catalog:recipe_detail' recipe.id %}" class="w3-bar-item w3-button">{{ recipe.title }}</a>
                     </p>
                 {% empty %}
                     <p>Рецептов пока нет.</p>
